--- a/INDEX.CSS
+++ b/INDEX.CSS
@@ -21,6 +21,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        flex-wrap:wrap;
     }    
     nav
     {
@@ -39,6 +40,7 @@
         justify-content: center;
         text-align: center;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
     }
     #logo
     {
@@ -76,6 +78,7 @@
         padding-bottom: 100px;
         margin-top: 75px;
         justify-content: center;
+        font-size: 16 px;
         align-items: center;
         text-align: center;
         background-color: transparent;
